tests/ui/nll/issue-48803.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/issue-48803.rs:10:5
   |
LL |     let y = &x;
   |             -- `x` is borrowed here
...
LL |     x = "modified";
   |     ^^^^^^^^^^^^^^ `x` is assigned to here but it was already borrowed
LL |
LL |     println!("{}", w); // prints "modified"
   |                    - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
